[tool.poetry]
name = "zelando-fashion-mnist"
version = "0.1.0"
description = ""
authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^5.4.3"
numpy = "^1.19.5"
scipy = "^1.6.0"
tensorflow = "^2.4.0"
Keras = "^2.4.3"
pandas = "^1.2.0"
matplotlib = "^3.3.3"
sklearn = "^0.0"
seaborn = "^0.11.1"
keras-tuner = "^1.0.2"
witwidget = "^1.7.0"
tensorboard-plugin-profile = "^2.4.0"
wandb = "^0.10.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
